# revengine

./: .gitignore  Cargo.toml  README.md  Revengine.sln
.github/workflows/: rust.yml
Revengine/: Revengine.csproj
crates/ecs/: Cargo.toml
crates/gltf/: Cargo.toml
crates/render/: Cargo.toml
crates/render/src/: bind_group_builder.rs  lib.rs  render_pass.rs  render_pipleine_builder.rs  renderer.rs  shader.rs  texture.rs
crates/render/src/buffers/: index.rs  mod.rs  uniform.rs
crates/render/src/buffers/vertices/: mod.rs
crates/render/src/camera/: mod.rs
crates/render/src/light/: mod.rs
crates/render/src/material/: mod.rs  pbr.rs
crates/render/src/material/assets/shaders/: base_material_fragment.wgsl  base_material_vertex.wgsl  pbr_material_fragment.wgsl  pbr_material_vertex.wgsl
crates/render/src/mesh/: material.rs  mod.rs
crates/render/src/mesh/assets/shaders/: base_material_fragment.wgsl  base_material_vertex.wgsl
crates/render/src/opengl/: mod.rs
crates/render/src/opengl/buffers/: buffer_array.rs  elements.rs  mod.rs
crates/render/src/opengl/buffers/vertices/: macros.rs  mod.rs  vertex.rs
crates/render/src/opengl/shaders/: mod.rs  resources.rs
crates/render/src/renderable/: gpu.rs  mod.rs
crates/render/src/revengine_wgpu/: bind_group_builder.rs  mod.rs  render_pass.rs  render_pipleine_builder.rs  renderer.rs  texture.rs
crates/render/src/revengine_wgpu/buffers/: mod.rs  uniform.rs  vertex.rs
crates/render/src/revengine_wgpu/buffers/vertices/: mod.rs
crates/render/src/revengine_wgpu/mesh/: gltf_loader.rs  material.rs  mod.rs  pbr.rs
crates/render/src/transform/: mod.rs
engine/: Cargo.toml
examples/cube/: main.rs  shader.wgsl
examples/triangle/: main.rs  shader.wgsl
src/: lib.rs
(+93 files in other folders)
