[package]
name = "revengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspaces]
members = ["./crates/*"]

[dependencies]
render = { path = "crates/render" }

[dev-dependencies]
winit = "0.27"
pollster = "0.2.5"
image = "0.24"
bytemuck = { version = "1.12", features = ["derive"] }
wgpu = "0.13"