[package]
name = "revengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspaces]
members = ["./crates/*"]

[dependencies]
render = { path = "crates/render" }
ecs = { path = "crates/ecs" }

[features]
wayland = ["render/wayland"]