[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.45.0"
gl = "0.14.0"
wgpu = { version = "0.13", optional = true }
bytemuck = { version = "1.12", features = ["derive"], optional = true }
image = { version = "0.24", optional = true }
gltf = { version = "1", optional = true }

[features]
wayland = ["glfw/wayland"]
wgpu = ["dep:wgpu", "dep:bytemuck", "dep:image", "dep:gltf"]