[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.14" }
bytemuck = { version = "1.12", features = ["derive"] }
image = { version = "0.24" }
glam = { version = "0.21.3", features = ["bytemuck"] }